[package]
name = "grok"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
dotenv = "0.15.0"
futures-util = "0.3.32"
gemini-rust = "1.7.1"
matrix-sdk = { version = "0.16.0", default-features = false, features = ["anyhow", "e2e-encryption", "rustls-tls"] }
reqwest = { version = "0.13.2", features = ["json"] }
ruma = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing", "tracing-serde"] }
